index.html updated

--- a/index.html
+++ b/index.html
@@ -457,8 +457,8 @@ Winnie-the-Pooh">
     </div>
 
     <!-- Iframe: -->
-    <iframe width="450" height="350" src="http://maps.google.co.uk/maps?q=moma+new+york&amp;output=embed">
-    </iframe> <br>
+    <!-- <iframe width="450" height="350" src="http://maps.google.co.uk/maps?q=moma+new+york&amp;output=embed">
+    </iframe> <br> -->
 
     <iframe width="560" height="315" src="https://www.youtube.com/embed/Q87ns125BKA" title="YouTube video player"
         frameborder="0"
