list heading updated

--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
         <h1>Sajid Hanif's Blog</h1>
     </a>
 
-    <h1>Huzaifa Sajid</h1>
-
-    <h1>My Name is Huzaifa</h1>
+    <h1>List of Items</h1>
 
     <ul>
         <li>CPU</li>
