--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
 
 
-    <title>HTML-Assignment-02</title>
+    <title>HTML-Assignment02-SMIT</title>
 </head>
 
 <body oncontextmenu="return false">
